--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
 </head>
 <body>
 
-<div class="rows"><h1 class="text-center">TIC TAC TOE</h1></div>
+<div class="container"><h1 class="text-center">TIC TAC TOE</h1></div>
 
-<div class="rows">
-    <table>
-        <tr>
-            <td>x</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
+<div class="container">
+    <div class="table">
+        <table>
+            <tr>
+                <td>x</td>
+                <td>x</td>
+                <td>o</td>
+            </tr>
+            <tr>
+                <td>x</td>
+                <td>o</td>
+                <td>x</td>
+            </tr>
+            <tr>
+                <td>o</td>
+                <td>x</td>
+                <td>x</td>
+            </tr>
+        </table>
+    </div>
 </div>
 </body>
 </html>
