update index js, style, index html

--- a/index.html
+++ b/index.html
@@ -12,24 +12,10 @@
 
 <div class="container">
     <div class="table">
-        <table>
-            <tr>
-                <td>x</td>
-                <td>x</td>
-                <td>o</td>
-            </tr>
-            <tr>
-                <td>x</td>
-                <td>o</td>
-                <td>x</td>
-            </tr>
-            <tr>
-                <td>o</td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-        </table>
+        <table></table>
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
