--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
 
 <div class="container">
     <div class="table">
-        <table></table>
+        <div style="margin: 0.5em">
+            <div class="label" style="width: 10%;display: inline-block;">Row & Column</div>
+            <input type="range" min="1" max="100" value="50">
+            <!--<input type="text" value="">-->
+        </div>
+        <div style="margin: 0.5em">
+            <div class="label" style="width:10%; display: inline-block;">Border color</div>
+            <input type="color">
+        </div>
+        <div style="margin: 0.5em">
+            <div class="label" style="width:10%; display: inline-block;">Player1 color</div>
+            <input type="color">
+        </div>
+        <div style="margin: 0.5em">
+            <div class="label" style="width:10%; display: inline-block;">Player2 color</div>
+            <input type="color">
+        </div>
+        <div style="margin: 0.5em">
+            <div class="button">Apply</div>
+        </div>
+        <table align="center" class="text-center"></table>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
