update function win

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
 <div class="container">
     <div class="table">
-        <div style="margin: 0.5em">
+        <div class="fields-form">
             <div class="label" style="width: 10%;display: inline-block;">Row & Column</div>
             <input type="range" min="1" max="100" value="50">
             <!--<input type="text" value="">-->
         </div>
-        <div style="margin: 0.5em">
-            <div class="label" style="width:10%; display: inline-block;">Border color</div>
+        <div class="fields-form">
+            <div class="label">Border color</div>
             <input type="color">
         </div>
-        <div style="margin: 0.5em">
-            <div class="label" style="width:10%; display: inline-block;">Player1 color</div>
+        <div class="fields-form">
+            <div class="label">Player1 color</div>
             <input type="color">
         </div>
-        <div style="margin: 0.5em">
-            <div class="label" style="width:10%; display: inline-block;">Player2 color</div>
+        <div class="fields-form">
+            <div class="label" >Player2 color</div>
             <input type="color">
         </div>
-        <div style="margin: 0.5em">
+        <div class="fields-form">
             <div class="button">Apply</div>
         </div>
         <table align="center" class="text-center"></table>
