update function reset and style

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <div class="fields-form">
             <div class="button">Apply</div>
+            <div class="button" id="reset">Reset</div>
         </div>
         <table align="center" class="text-center"></table>
     </div>
