--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
 
 <div class="container"><h1 class="text-center">TIC TAC TOE</h1></div>
 
-<div class="container">
-    <div class="table">
+<div class="container flex">
+    <div class="column">
         <div class="fields-form">
-            <div class="label" style="width: 10%;display: inline-block;">Row & Column</div>
-            <input type="range" min="1" max="100" value="50">
-            <!--<input type="text" value="">-->
+            <div class="label column-1">Row & Column</div>
+            <input type="text" value="" class="column-2">
         </div>
         <div class="fields-form">
-            <div class="label">Border color</div>
+            <div class="label column-1">Border color</div>
             <input type="color">
         </div>
         <div class="fields-form">
-            <div class="label">Player1 color</div>
+            <div class="label column-1">Player1 color</div>
             <input type="color">
         </div>
         <div class="fields-form">
-            <div class="label" >Player2 color</div>
+            <div class="label column-1" >Player2 color</div>
             <input type="color">
         </div>
         <div class="fields-form">
             <div class="button">Apply</div>
             <div class="button" id="reset">Reset</div>
         </div>
-        <table align="center" class="text-center"></table>
+    </div>
+    <div class="column">
+        <div class="table">
+            <table align="center" class="text-center"></table>
+        </div>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
